--- a/web/css/default.css
+++ b/web/css/default.css
@@ -174,3 +174,16 @@ a {
 .resultado span {
 	font-size: 24px;
 }
+#footer {
+	text-align: center;
+	position: fixed;
+	bottom: 0px;
+	background-color: lightgray;
+	width: 100%;
+	padding: 10px;
+	opacity: 0.5;
+}
+a {
+	color: #2980b9;
+	text-decoration: none;
+}
