--- a/web/css/default.css
+++ b/web/css/default.css
@@ -174,16 +174,16 @@ a {
 .resultado span {
 	font-size: 24px;
 }
-#footer {
+.footer {
 	text-align: center;
 	position: fixed;
 	bottom: 0px;
 	background-color: lightgray;
 	width: 100%;
 	padding: 10px;
-	opacity: 0.4;
+	opacity: 0.3;
 }
-#footer a {
+.footer a {
 	color: red;
 	text-decoration: none;
 }
